fixed issues with heading covering anchors

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5858,7 +5858,7 @@ button.close {
     padding-bottom: 10%;
   }
 
-.carousel-indicators {
+/*.carousel-indicators {
   position: absolute;
   padding-bottom: 10%;
   left: 50%;
@@ -5897,7 +5897,7 @@ button.close {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
-}
+}*/
 .carousel-caption .btn {
   text-shadow: none;
 }
