--- a/css/responsive-nav.css
+++ b/css/responsive-nav.css
@@ -50,7 +50,7 @@
   background-color: gold;
 }
 #process {
-  margin-top: 20px;
+  padding-top: 15em;
 }
 .skills-column {
   margin: 0 1em;
