--- a/css/styles.css
+++ b/css/styles.css
@@ -8,17 +8,20 @@ a:link, a:visited {
       margin: 0 9%;
 }
 .anchordiv {
-    padding-top: 100px;
-}
+    position: absolute;
+ }
 .anchordiv h2 {
     background-color: lightgray;
     color: black;
+    position: absolute;
+    top:-250px;
 }
 body {
-    background-image: url("../img/wpid-Binary-Wallpaper-19.jpg");
     background-attachment: fixed;
     position: relative;
     margin: 0 10% 0 10%;
+    background-image: url("../img/wpid-Binary-Wallpaper-19.jpg");
+    background-size: cover;
 }
 .button-link {
     padding: 2px;
@@ -58,10 +61,6 @@ body {
     margin: 0 auto;   
     z-index:  14;
 }
-.carousel-caption {
-    top: 1%;
-    max-height: 50%;
-}   
 .carousel-inner {
     margin: 0 auto;
 }
@@ -70,6 +69,10 @@ body {
     height: 100% !important; 
     margin: 0 auto;
 }
+.carousel-caption {
+    top: 1%;
+    max-height: 50%;
+}  
 .carousel-caption h4 {
     color: black;
     font-size: 1em;
@@ -79,9 +82,12 @@ body {
 }
 .carousel-indicators {
     background-color: DarkGrey;
-    width: 20% !important;
+    width: 10% !important;
     position: relative;
-    padding-bottom: 5%;
+    margin: 10% auto -20% auto !important;
+    max-height: 2em !important;
+    position: absolute;
+
 }
 #contact{
     background-image: url("../img/desktop.jpg");
@@ -99,6 +105,7 @@ body {
     align: left;
     padding: 15em 5em 5em 0;
     margin-left: 0;
+
 }
 .container h2 {
     margin-left: 5%;
@@ -114,7 +121,8 @@ body {
 /*Typography*/
 h1, h2, h3 {
     font-family: Futura, Helvetica, Arial, sans-serif;
-}
+}   
+
 .header {
     min-height: 20%;
     width: 100%;
@@ -125,6 +133,7 @@ h1, h2, h3 {
     text-align: left;
     padding-bottom: .25em;
     padding-left: 3em;
+    margin-top: 10%;
 }
 .hide-block{
     display: none;
@@ -154,8 +163,8 @@ h1, h2, h3 {
    .carousel-caption p {
             font-size: 1em;
             line-height: 1.4;
-            bottom: 30%;
-}
+            bottom: 10%;}
+        }
 /* landscape phone to portrait tablet */
 @media (max-width: 767px) {
    .carousel-caption p {
@@ -218,12 +227,15 @@ p, li {
     font-size: 1.2em;
     margin: auto .2em auto 0.2em !important;
 }
+
+}
 .projectName  {
     color: white;
     text-transform: uppercase;
     font-size: 1.5em;
     padding: 0 0 0 30px;
 }
+
 #share-buttons img twitter-share-button{
     border: 0;
     box-shadow: 0;
